# wasmlinux-runner

./: .gitmodules  README.md
emframe/: _serve.py  index.html
hostrunner/: CMakeLists.txt  glue_modules.c  glue_modules.h  runner.cpp  userctx_w2c.c
hostrunner/kernel_data/: readtbl.cmake  syscall_argc.h  syscall_argc_fixup.h  syscalls.h
hostrunner/mempoolite/: mplite.h
kmwrap/stubs/: geninittbl.cmake  hostwasm_lklops.c  hostwasm_main.c  hostwasm_nisys.c  initschedclasses.c
umwrap/wasm2c/: w2cfixup.h
